--- a/Linear_regression.ipynb
+++ b/Linear_regression.ipynb
@@ -8,9 +8,6 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
     "from scipy.stats import t, f, norm"
    ]
   },
@@ -31,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,6 +60,9 @@
     "        self.std_error = np.sqrt((sse/(n-p-1)) * Q.diagonal())\n",
     "        self.t_values = self.beta / self.std_error\n",
     "        self.t_pvalues = [2*(1 - t.cdf(abs(i), n-p-1)) for i in self.t_values]\n",
+    "        self.log_likelihood = np.log(norm.pdf(y, y_hat, self.residual.std(ddof=0))).sum()\n",
+    "        self.aic = -2 * self.log_likelihood + 2*self.beta.size\n",
+    "        self.bic = -2 * self.log_likelihood + self.beta.size * np.log(self.n_samples)\n",
     "        \n",
     "    def predict(self, X):\n",
     "        X_ = np.append(np.ones((X.shape[0], 1)), X, axis=1)\n",
@@ -90,7 +90,8 @@
     "        r2 = 'R-squared: {}, Adjusted R-squared: {}'.format(self.r_sq, self.adj_r)\n",
     "        res_std_err = 'Residual standard error: {} on {} degrees of freedom'.format(self.mse, self.n_samples - self.n_features -1)\n",
     "        F_stats = 'F-statistic: {} on {} and {} DF, p-value: {}'.format(self.f_value, self.n_features, self.n_samples - self.n_features -1, self.f_pvalue)\n",
-    "        print(res, coef, res_std_err, r2, F_stats, sep='\\n'+'='*70+'\\n')"
+    "        criterions = 'Log-likelihood: {}, AIC: {}, BIC: {}'.format(self.log_likelihood, self.aic, self.bic)\n",
+    "        print(res, coef, res_std_err, r2, F_stats, criterions, sep='\\n'+'='*70+'\\n')"
    ]
   },
   {
@@ -146,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,13 +165,296 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "lr = linear_regression()\n",
     "lr.fit(X_train, y_train)\n",
     "pred_ = lr.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(404, 13)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lr.beta.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_ = np.hstack((np.ones((X_train.shape[0], 1)), X_train))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_var = y_train.var(ddof=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1196.3780041833916"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.stats import norm\n",
+    "y_train_ = X_.dot(lr.beta)\n",
+    "sig = np.std(y_train_-y_train, ddof=0)\n",
+    "np.log(norm.pdf(y_train, y_train_, sig)).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.01822146029166958"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "norm.pdf(y_train.values[2], y_train_[2], sig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gauss_pdf(x, mu, sig):\n",
+    "    return np.exp(-(x-mu)**2/(2*(sig**2))) / np.sqrt(2*np.pi*(sig**2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def log_gauss_pdf(x, mu, sig):\n",
+    "    return -np.log(2*np.pi*(sig)**2) /2 - (x - mu)**2/(2*(sig**2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gauss_llf(x, mu, sig):\n",
+    "    N = x.size\n",
+    "    return -np.log(2*np.pi*(sig**2))*N/2 - sum((x - mu)**2)/(2*(sig**2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1626.7442818668708"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gauss_llf(y_train.values, y_train_, sig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-3244.2491228189656"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log_gauss_pdf(y_train.values, y_train_, sig).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-2.2397730440950046"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.log(gauss_pdf(-1, 1, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-2.2397730440950046"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log_gauss_pdf(-1, 1, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.10648266850745075"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "norm.pdf(-1, 1, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1626.7442818668708"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.log(np.array([gauss_pdf(y_train.values[i], y_train_[i], sig) for i in range(y_train.size)])).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42     25.3\n",
+       "58     23.3\n",
+       "385     7.2\n",
+       "78     21.2\n",
+       "424    11.7\n",
+       "       ... \n",
+       "255    20.9\n",
+       "72     22.8\n",
+       "396    12.5\n",
+       "235    24.0\n",
+       "37     21.0\n",
+       "Name: label, Length: 404, dtype: float64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train"
    ]
   },
   {
@@ -195,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -225,14 +509,16 @@
       "======================================================================\n",
       "R-squared: 0.7293585058196337, Adjusted R-squared: 0.7203371226802882\n",
       "======================================================================\n",
-      "F-statistic: 80.84774746331682 on 13 and 390 DF, p-value: 1.1102230246251565e-16\n"
+      "F-statistic: 80.84774746331682 on 13 and 390 DF, p-value: 1.1102230246251565e-16\n",
+      "======================================================================\n",
+      "Log-likelihood: -1196.3780041833916, AIC: 2420.756008366783, BIC: 2476.7758166582394\n"
      ]
     }
    ],
    "source": [
     "lr = linear_regression()\n",
     "lr.fit(X_train, y_train)\n",
-    "lr.summary(feature_names=feature_names)"
+    "lr.summary(feature_names = feature_names)"
    ]
   },
   {
@@ -244,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -256,8 +542,8 @@
       "Dep. Variable:                  label   R-squared:                       0.729\n",
       "Model:                            OLS   Adj. R-squared:                  0.720\n",
       "Method:                 Least Squares   F-statistic:                     80.85\n",
-      "Date:                Sun, 01 Aug 2021   Prob (F-statistic):          5.53e-102\n",
-      "Time:                        00:36:15   Log-Likelihood:                -1196.4\n",
+      "Date:                Fri, 27 Aug 2021   Prob (F-statistic):          5.53e-102\n",
+      "Time:                        16:21:48   Log-Likelihood:                -1196.4\n",
       "No. Observations:                 404   AIC:                             2421.\n",
       "Df Residuals:                     390   BIC:                             2477.\n",
       "Df Model:                          13                                         \n",
@@ -299,6 +585,146 @@
     "est = sm.OLS(y_train, X2)\n",
     "est2 = est.fit()\n",
     "print(est2.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.allclose(lr.beta,est2.params.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5252"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2476.7758166582394"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "-2*est2.llf +14*np.log(X_train.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2476.7758166582394"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "est2.bic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1196.3780041833916"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "N = X_train.shape[0]\n",
+    "s2 = np.var(y_train_-y_train, ddof=0)\n",
+    "-(np.log(2*np.pi)*N/2 + np.log(s2)*N/2 + np.square(y_train - y_train_).sum()/(2*s2) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1196.3780041833916"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gauss_llf(y_train, y_train_, s2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gauss_llf(x, mu, sig):\n",
+    "    N = x.size\n",
+    "    return -np.log(2*np.pi*(sig))*N/2 - np.square((x - mu)).sum()/(2*(sig))"
    ]
   },
   {
